--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			<ul class="nav">
 				<li><a class="button nav-first" href="https://github.com/lhearachel/porydex"><img src="images/pokemonshowdownbeta.png" alt="Pok&eacute;mon Showdown! (beta)" />Github</a></li>
 				<li><a class="button cur" href="/">Pok&eacute;dex</a></li>
-				<li><a class="button" href="/">Calculator</a></li>
-                <li><a class="button nav-last" href="/">Documentation</a></li>
+				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid-Calc/" target="_blank">Calculator</a></li>
+                <li><a class="button nav-last" href="https://github.com/pkLucid/Pokemon-Lucid/blob/main/mastersheet.md" target="_blank">Documentation</a></li>
 			</ul>
 			<div style="clear:both"></div>
 		</div>
