--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 		<div class="header">
 			<ul class="nav">
 				<li><a class="button nav-first" href="https://github.com/lhearachel/porydex"><img src="images/pokemonshowdownbeta.png" alt="Pok&eacute;mon Showdown! (beta)" />Github</a></li>
-				<li><a class="button cur" href="index.html">Pok&eacute;dex</a></li>
+				<li><a class="button" href="/">Pok&eacute;dex</a></li>
 				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid-Calc/" target="_blank">Calculator</a></li>
-                <li><a class="button nav-last" href="https://pklucid.github.io/Pokemon-Lucid/src/introduction.html" target="_blank">Documentation</a></li>
+				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid/src/download.html" target="_blank">Download</a></li>
+				<li><a class="button nav-last" href="src/resources.html" >Trainer Sheet</a><li/>
 			</ul>
 			<div style="clear:both"></div>
 		</div>
