--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li><a class="button" href="/">Pok&eacute;dex</a></li>
 				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid-Calc/" target="_blank">Calculator</a></li>
 				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid/src/download.html" target="_blank">Download</a></li>
-				<li><a class="button nav-last" href="src/resources.html" >Trainer Sheet</a><li/>
+				<li><a class="button nav-last" href="src/resources.html" target="_blank">Trainer Sheet</a><li/>
 			</ul>
 			<div style="clear:both"></div>
 		</div>
