--- a/src/flannery_split.html
+++ b/src/flannery_split.html
@@ -1015,7 +1015,7 @@
 <tbody>
 <tr> <!-- Images -->
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/avalugg-hisui.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/braviary-hisui.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/lokix.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/malamar.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/togekiss.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/brambleghast.png" alt=""></img></td>
@@ -1023,7 +1023,7 @@
 </tr>
 <tr> <!-- Species -->
 <th>Avalugg-Hisui</th>
-<th>Braviary-Hisui</th>
+<th>Lokix</th>
 <th>Malamar</th>
 <th>Togekiss</th>
 <th>Brambleghast</th>
@@ -1039,7 +1039,7 @@
 </tr>
 <tr>
 <td>Red Card</td>
-<td>Life Orb</td>
+<td>Lum Berry</td>
 <td>Tanga Berry</td>
 <td>Throat Spray</td>
 <td>Focus Sash</td>
@@ -1047,7 +1047,7 @@
 </tr>
 <tr>
 <td>Sturdy</td>
-<td>Sheer Force</td>
+<td>Tinted Lens</td>
 <td>Contrary</td>
 <td>Aerilate</td>
 <td>Wind Rider</td>
@@ -1055,7 +1055,7 @@
 </tr>
 <tr>
 <td>Jolly</td>
-<td>Modest</td>
+<td>Adamant</td>
 <td>Adamant</td>
 <td>Modest</td>
 <td>Adamant</td>
@@ -1063,7 +1063,7 @@
 </tr>
 <tr>
 <td>Body Press</td>
-<td>Esper Wing</td>
+<td>First Impression</td>
 <td>Superpower</td>
 <td>Alluring Voice</td>
 <td>Power Whip</td>
@@ -1071,7 +1071,7 @@
 </tr>
 <tr>
 <td>Mountain Gale</td>
-<td>Hurricane</td>
+<td>Knock Off</td>
 <td>Knock Off</td>
 <td>Hyper Voice</td>
 <td>Poltergeist</td>
@@ -1079,7 +1079,7 @@
 </tr>
 <tr>
 <td>Stone Edge</td>
-<td>Shadow Ball</td>
+<td>Leech Life</td>
 <td>Psycho Cut</td>
 <td>Flamethrower</td>
 <td>Skitter Smack</td>
@@ -1087,7 +1087,7 @@
 </tr>
 <tr>
 <td>Stealth Rock</td>
-<td>Heat Wave</td>
+<td>Reversal</td>
 <td>Destiny Bond</td>
 <td>Aura Sphere</td>
 <td>Rollout</td>
@@ -1851,7 +1851,7 @@
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/politoed.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/frosmoth.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/dhelmise.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/slowbro-galar.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/toxicroak.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/basculegion.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/goodra-hisui.png" alt=""></img></td>
 </tr>
@@ -1859,7 +1859,7 @@
 <th>Politoed</th>
 <th>Frosmoth</th>
 <th>Dhelmise</th>
-<th>Slowbro-Galar</th>
+<th>Toxicroak</th>
 <th>Basculegion</th>
 <th>Goodra-Hisui</th>
 </tr>
@@ -1875,7 +1875,7 @@
 <td>Assault Vest</td>
 <td>Choice Scarf</td>
 <td>Bright Powder</td>
-<td>Focus Band</td>
+<td>Payapa Berry</td>
 <td>Life Orb</td>
 <td>Wacan Berry</td>
 </tr>
@@ -1883,7 +1883,7 @@
 <td>Drizzle</td>
 <td>Ice Scales</td>
 <td>Steelworker</td>
-<td>Quick Draw</td>
+<td>Dry Skin</td>
 <td>Swift Swim</td>
 <td>Sap Sipper</td>
 </tr>
@@ -1891,7 +1891,7 @@
 <td>Bold</td>
 <td>Timid</td>
 <td>Adamant</td>
-<td>Modest</td>
+<td>Adamant</td>
 <td>Adamant</td>
 <td>Modest</td>
 </tr>
@@ -1907,7 +1907,7 @@
 <td>Scald</td>
 <td>Weather Ball</td>
 <td>Rock Slide</td>
-<td>Psychic</td>
+<td>Gunk Shot</td>
 <td>Liquidation</td>
 <td>Thunder</td>
 </tr>
@@ -1915,7 +1915,7 @@
 <td>Ice Beam</td>
 <td>Ice Beam</td>
 <td>Anchor Shot</td>
-<td>Shell Side Arm</td>
+<td>Drain Punch</td>
 <td>Last Respects</td>
 <td>Weather Ball</td>
 </tr>
@@ -1923,7 +1923,7 @@
 <td>Earth Power</td>
 <td>Bug Buzz</td>
 <td>Poltergeist</td>
-<td>Weather Ball</td>
+<td>Ice Punch</td>
 <td>Ice Fang</td>
 <td>Ice Beam</td>
 </tr>
@@ -1931,7 +1931,7 @@
 <td>Psychic</td>
 <td></td>
 <td>Power Whip</td>
-<td>Nasty Plot</td>
+<td>Bullet Punch</td>
 <td>Head Smash</td>
 <td>Flash Cannon</td>
 </tr>
