--- a/src/steven_split.html
+++ b/src/steven_split.html
@@ -210,7 +210,7 @@
 <td>Brave Bird</td>
 <td>Tailwind</td>
 <td>Iron Head</td>
-<td>Blizzard</td>
+<td>Ice Beam</td>
 </tr>
 <tr>
 <td>Reversal</td>
@@ -369,7 +369,7 @@
 <tr>
 <td>Defiant</td>
 <td>Tough Claws</td>
-<td>Shadow Tag</td>
+<td>Competitive</td>
 <td>Beast Boost</td>
 <td>Moxie</td>
 <td>Scrappy</td>
@@ -649,7 +649,7 @@
 <td>Sharpness</td>
 <td>Big Pecks</td>
 <td>Speed Boost</td>
-<td>Regenerator</td>
+<td>Supersweet Syrup</td>
 <td>Clear Body</td>
 <td>Flash Fire</td>
 </tr>
@@ -672,7 +672,7 @@
 <tr>
 <td>Aqua Cutter</td>
 <td>Tailwind</td>
-<td>Earthquake</td>
+<td>X-Scissor</td>
 <td>Body Press</td>
 <td>Diamond Storm</td>
 <td>Energy Ball</td>
@@ -680,7 +680,7 @@
 <tr>
 <td>Sacred Sword</td>
 <td>Toxic</td>
-<td>Rock Slide</td>
+<td>Poison Jab</td>
 <td>Energy Ball</td>
 <td>Body Press</td>
 <td>Flamethrower</td>
@@ -688,7 +688,7 @@
 <tr>
 <td>Ceaseless Edge</td>
 <td>Roost</td>
-<td>Poison Jab</td>
+<td>Stomping Tantrum</td>
 <td>Fickle Beam</td>
 <td>Play Rough</td>
 <td>Psychic</td>
@@ -696,7 +696,7 @@
 <tr>
 <td>Air Slash</td>
 <td>Foul Play</td>
-<td>Megahorn</td>
+<td>Rock Slide</td>
 <td>Earth Power</td>
 <td>Rock Polish</td>
 <td>Shadow Ball</td>
@@ -1295,7 +1295,7 @@
 </tr>
 <tr>
 <td>Loaded Dice</td>
-<td>Chesto Berry</td>
+<td>Aguav Berry</td>
 <td>Life Orb</td>
 <td>Safety Goggles</td>
 <td>Choice Scarf</td>
@@ -1343,7 +1343,7 @@
 </tr>
 <tr>
 <td>Stealth Rock</td>
-<td>Rest</td>
+<td>Stealth Rock</td>
 <td>Grass Knot</td>
 <td>Aura Sphere</td>
 <td></td>
