--- a/src/winona_split.html
+++ b/src/winona_split.html
@@ -1025,83 +1025,83 @@
 <caption class="caption-content">Camper Patrick</caption>
 <tbody>
 <tr> <!-- Images -->
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/drifblim.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/forretress.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/clodsire.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/wochien.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/ferrothorn.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/ludicolo.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/tentacruel.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/golduck.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/yanmega.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
 </tr>
 <tr> <!-- Species -->
-<th>Drifblim</th>
+<th>Forretress</th>
+<th>Clodsire</th>
 <th>WoChien</th>
-<th>Ferrothorn</th>
-<th>Ludicolo</th>
-<th>Tentacruel</th>
+<th>Golduck</th>
+<th>Yanmega</th>
 <th></th>
 </tr>
 <tr>
 <td>63</td>
+<td>64</td>
 <td>62</td>
 <td>64</td>
 <td>64</td>
-<td>63</td>
 <td></td>
 </tr>
 <tr>
-<td>Grassy Seed</td>
+<td>Iapapa Berry</td>
+<td>Wide Lens</td>
 <td>Tanga Berry</td>
-<td>Leftovers</td>
-<td>Focus Sash</td>
-<td>Black Sludge</td>
+<td>Wise Glasses</td>
+<td>Scope Lens</td>
 <td></td>
 </tr>
 <tr>
-<td>Unburden</td>
+<td>Sturdy</td>
+<td>Water Absorb</td>
 <td>Tablets Of Ruin</td>
-<td>Iron Barbs</td>
 <td>Swift Swim</td>
-<td>Rain Dish</td>
+<td>Speed Boost</td>
 <td></td>
 </tr>
 <tr>
-<td>Modest</td>
-<td>Calm</td>
 <td>Sassy</td>
-<td>Modest</td>
+<td>Adamant</td>
 <td>Calm</td>
+<td>Hasty</td>
+<td>Modest</td>
 <td></td>
 </tr>
 <tr>
-<td>Thunder</td>
-<td>Dark Pulse</td>
-<td>Power Whip</td>
-<td>Giga Drain</td>
-<td>Scald</td>
-<td></td>
-</tr>
-<tr>
-<td>Hurricane</td>
-<td>Giga Drain</td>
-<td>Body Press</td>
-<td>Weather Ball</td>
-<td>Acid Armor</td>
-<td></td>
-</tr>
-<tr>
-<td>Shadow Ball</td>
-<td>Body Press</td>
 <td>Gyro Ball</td>
-<td>Ice Beam</td>
-<td>Mirror Coat</td>
+<td>Megahorn</td>
+<td>Foul Play</td>
+<td>Surf</td>
+<td>Signal Beam</td>
 <td></td>
 </tr>
 <tr>
-<td>Weather Ball</td>
+<td>Volt Switch</td>
+<td>Poison Jab</td>
+<td>Leaf Storm</td>
+<td>Psychic</td>
+<td>Air Cutter</td>
+<td></td>
+</tr>
+<tr>
+<td>Stone Edge</td>
+<td>Stomping Tantrum</td>
+<td>Body Press</td>
+<td>Ice Beam</td>
+<td>Hidden Power Fighting</td>
+<td></td>
+</tr>
+<tr>
+<td>Stealth Rock</td>
+<td>Liquidation</td>
 <td>Substitute</td>
-<td>Curse</td>
-<td>Protect</td>
-<td>Protect</td>
+<td>Flip Turn</td>
+<td>Hypnosis</td>
 <td></td>
 </tr>
 </tbody>
@@ -1196,82 +1196,82 @@
 <tbody>
 <tr> <!-- Images -->
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/overqwil.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/glaceon.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/roserade.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/brutebonnet.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/mantine.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
 </tr>
 <tr> <!-- Species -->
 <th>Overqwil</th>
-<th>Glaceon</th>
 <th>Roserade</th>
 <th>Brute Bonnet</th>
 <th>Mantine</th>
 <th></th>
+<th></th>
 </tr>
 <tr>
-<td>63</td>
 <td>63</td>
 <td>62</td>
 <td>63</td>
 <td>64</td>
 <td></td>
+<td></td>
 </tr>
 <tr>
 <td>Clear Amulet</td>
-<td>Grassy Seed</td>
 <td>Black Sludge</td>
 <td>Booster Energy</td>
 <td>Life Orb</td>
 <td></td>
+<td></td>
 </tr>
 <tr>
 <td>Intimidate</td>
-<td>Slush Rush</td>
 <td>Technician</td>
 <td>Protosynthesis</td>
 <td>Swift Swim</td>
 <td></td>
+<td></td>
 </tr>
 <tr>
 <td>Jolly</td>
-<td>Timid</td>
 <td>Modest</td>
 <td>Adamant</td>
 <td>Modest</td>
 <td></td>
+<td></td>
 </tr>
 <tr>
 <td>Gunk Shot</td>
-<td>Ice Beam</td>
 <td>Sludge Bomb</td>
 <td>Seed Bomb</td>
 <td>Hurricane</td>
 <td></td>
+<td></td>
 </tr>
 <tr>
 <td>Throat Chop</td>
-<td>Freeze-Dry</td>
 <td>Magical Leaf</td>
 <td>Lash Out</td>
 <td>Surf</td>
 <td></td>
+<td></td>
 </tr>
 <tr>
 <td>Waterfall</td>
-<td>Weather Ball</td>
 <td>Hidden Power Ice</td>
 <td>Sucker Punch</td>
 <td>Ice Beam</td>
 <td></td>
+<td></td>
 </tr>
 <tr>
 <td>Destiny Bond</td>
-<td>Mud Shot</td>
 <td>Weather Ball</td>
 <td>Spore</td>
 <td>Roost</td>
+<td></td>
 <td></td>
 </tr>
 </tbody>
