--- a/src/flannery_split.html
+++ b/src/flannery_split.html
@@ -1039,10 +1039,10 @@
 </tr>
 <tr>
 <td>Red Card</td>
-<td>Lum Berry</td>
+<td>Focus Sash</td>
 <td>Tanga Berry</td>
 <td>Throat Spray</td>
-<td>Focus Sash</td>
+<td>Clear Amulet</td>
 <td></td>
 </tr>
 <tr>
