--- a/src/steven_split.html
+++ b/src/steven_split.html
@@ -183,7 +183,7 @@
 <tr>
 <td>Wind Rider</td>
 <td>Water Absorb</td>
-<td>Early Bird</td>
+<td>Technician</td>
 <td>Wind Rider</td>
 <td>Earth Eater</td>
 <td>Snow Warning</td>
@@ -1302,7 +1302,7 @@
 <td></td>
 </tr>
 <tr>
-<td>Sand Force</td>
+<td>Sturdy</td>
 <td>Vessel Of Ruin</td>
 <td>Magic Guard</td>
 <td>Flame Body</td>
