--- a/src/winona_split.html
+++ b/src/winona_split.html
@@ -1490,7 +1490,7 @@
 <td>Intimidate</td>
 <td>Levitate</td>
 <td>Levitate</td>
-<td>Quick Feet</td>
+<td>Technician</td>
 <td>Levitate</td>
 <td></td>
 </tr>
