--- a/src/flannery_split.html
+++ b/src/flannery_split.html
@@ -34,7 +34,7 @@
 	</div>
     <div class="navbar">
         <ul>
-            <a href="resources.html">Home</a>
+            <a href="resources.html">Lucid v1.2.1</a>
             <a href="roxanne_split.html">Roxanne</a>
             <a href="brawly_split.html">Brawly</a>
             <a href="wattson_split.html">Wattson</a>
@@ -407,7 +407,7 @@
 <tbody>
 <tr> <!-- Images -->
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/seviper.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/zangoose.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/ursaluna.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/miltank.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/pinsir.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
@@ -415,7 +415,7 @@
 </tr>
 <tr> <!-- Species -->
 <th>Seviper</th>
-<th>Zangoose</th>
+<th>Ursaluna</th>
 <th>Miltank</th>
 <th>Pinsir</th>
 <th></th>
@@ -431,7 +431,7 @@
 </tr>
 <tr>
 <td>Expert Belt</td>
-<td>Toxic Orb</td>
+<td>Flame Orb</td>
 <td>Normal Gem</td>
 <td>Coba Berry</td>
 <td></td>
@@ -439,7 +439,7 @@
 </tr>
 <tr>
 <td>Infiltrator</td>
-<td>Toxic Boost</td>
+<td>Bulletproof</td>
 <td>Scrappy</td>
 <td>Mold Breaker</td>
 <td></td>
@@ -447,7 +447,7 @@
 </tr>
 <tr>
 <td>Modest</td>
-<td>Modest</td>
+<td>Jolly</td>
 <td>Adamant</td>
 <td>Adamant</td>
 <td></td>
@@ -455,7 +455,7 @@
 </tr>
 <tr>
 <td>Sludge Wave</td>
-<td>Gunk Shot</td>
+<td>High Horsepower</td>
 <td>Body Slam</td>
 <td>X-Scissor</td>
 <td></td>
@@ -463,7 +463,7 @@
 </tr>
 <tr>
 <td>Flamethrower</td>
-<td>Fire Punch</td>
+<td>Body Slam</td>
 <td>Body Press</td>
 <td>Storm Throw</td>
 <td></td>
@@ -471,7 +471,7 @@
 </tr>
 <tr>
 <td>Dark Pulse</td>
-<td>Knock Off</td>
+<td>Play Rough</td>
 <td>High Horsepower</td>
 <td>Body Slam</td>
 <td></td>
@@ -479,7 +479,7 @@
 </tr>
 <tr>
 <td>Giga Drain</td>
-<td>Hone Claws</td>
+<td>Fire Punch</td>
 <td>Milk Drink</td>
 <td>Swords Dance</td>
 <td></td>
@@ -835,7 +835,7 @@
 <td>Dazzling Gleam</td>
 <td>Iron Tail</td>
 <td></td>
-<td>Nasty Plot</td>
+<td>Night Shade</td>
 <td></td>
 </tr>
 </tbody>
@@ -1016,7 +1016,7 @@
 <tr> <!-- Images -->
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/avalugg-hisui.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/lokix.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/malamar.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/alakazam.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/togekiss.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/brambleghast.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
@@ -1024,7 +1024,7 @@
 <tr> <!-- Species -->
 <th>Avalugg-Hisui</th>
 <th>Lokix</th>
-<th>Malamar</th>
+<th>Alakazam</th>
 <th>Togekiss</th>
 <th>Brambleghast</th>
 <th></th>
@@ -1040,15 +1040,15 @@
 <tr>
 <td>Red Card</td>
 <td>Focus Sash</td>
-<td>Tanga Berry</td>
+<td>Electric Gem</td>
 <td>Throat Spray</td>
-<td>Clear Amulet</td>
+<td>Muscle Band</td>
 <td></td>
 </tr>
 <tr>
 <td>Sturdy</td>
 <td>Tinted Lens</td>
-<td>Contrary</td>
+<td>Synchronize</td>
 <td>Aerilate</td>
 <td>Wind Rider</td>
 <td></td>
@@ -1056,7 +1056,7 @@
 <tr>
 <td>Jolly</td>
 <td>Adamant</td>
-<td>Adamant</td>
+<td>Modest</td>
 <td>Modest</td>
 <td>Adamant</td>
 <td></td>
@@ -1064,23 +1064,23 @@
 <tr>
 <td>Body Press</td>
 <td>First Impression</td>
-<td>Superpower</td>
+<td>Psychic</td>
 <td>Alluring Voice</td>
-<td>Power Whip</td>
+<td>Poltergeist</td>
 <td></td>
 </tr>
 <tr>
 <td>Mountain Gale</td>
 <td>Knock Off</td>
-<td>Knock Off</td>
+<td>Shadow Ball</td>
 <td>Hyper Voice</td>
-<td>Poltergeist</td>
+<td>Seed Bomb</td>
 <td></td>
 </tr>
 <tr>
 <td>Stone Edge</td>
 <td>Leech Life</td>
-<td>Psycho Cut</td>
+<td>Shock Wave</td>
 <td>Flamethrower</td>
 <td>Skitter Smack</td>
 <td></td>
@@ -1088,7 +1088,7 @@
 <tr>
 <td>Stealth Rock</td>
 <td>Reversal</td>
-<td>Destiny Bond</td>
+<td>Grass Knot</td>
 <td>Aura Sphere</td>
 <td>Rollout</td>
 <td></td>
@@ -1400,9 +1400,9 @@
 </tr>
 <tr>
 <td>77</td>
-<td>77</td>
-<td>77</td>
-<td>77</td>
+<td>75</td>
+<td>75</td>
+<td>75</td>
 <td>77</td>
 <td>77</td>
 </tr>
@@ -1756,16 +1756,16 @@
 <tbody>
 <tr> <!-- Images -->
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/torkoal.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/bellibolt.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/arcanine-hisui.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/ragingbolt.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/skeledirge.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/noivern.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/exeggutor.png" alt=""></img></td>
 </tr>
 <tr> <!-- Species -->
 <th>Torkoal</th>
+<th>Bellibolt</th>
 <th>Arcanine-Hisui</th>
-<th>Raging Bolt</th>
 <th>Skeledirge</th>
 <th>Noivern</th>
 <th>Exeggutor</th>
@@ -1775,29 +1775,29 @@
 <td>75</td>
 <td>75</td>
 <td>75</td>
-<td>77</td>
+<td>75</td>
 <td>77</td>
 </tr>
 <tr>
 <td>Focus Sash</td>
+<td>Shuca Berry</td>
 <td>Air Balloon</td>
-<td>Assault Vest</td>
 <td>Quick Claw</td>
 <td>Covert Cloak</td>
 <td>Life Orb</td>
 </tr>
 <tr>
 <td>Drought</td>
+<td>Electromorphosis</td>
 <td>Rock Head</td>
-<td>Protosynthesis</td>
 <td>Blaze</td>
 <td>Aerilate</td>
 <td>Chlorophyll</td>
 </tr>
 <tr>
 <td>Modest</td>
+<td>Timid</td>
 <td>Naive</td>
-<td>Modest</td>
 <td>Modest</td>
 <td>Timid</td>
 <td>Modest</td>
@@ -1812,35 +1812,35 @@
 </tr>
 <tr>
 <td>Earth Power</td>
+<td>Discharge</td>
 <td>Flare Blitz</td>
-<td>Thunderclap</td>
 <td>Torch Song</td>
-<td>Boomburst</td>
+<td>Hyper Voice</td>
 <td>Solar Beam</td>
 </tr>
 <tr>
 <td>Heat Wave</td>
+<td>Weather Ball</td>
 <td>Head Smash</td>
-<td>Solar Beam</td>
 <td>Shadow Ball</td>
 <td>Heat Wave</td>
 <td>Psychic</td>
 </tr>
 <tr>
 <td>Solar Beam</td>
+<td>Reflect</td>
 <td>Extreme Speed</td>
-<td>Weather Ball</td>
 <td>Solar Beam</td>
 <td>Solar Beam</td>
 <td>Tera Blast</td>
 </tr>
 <tr>
 <td>Stealth Rock</td>
-<td>Solar Beam</td>
-<td>Dragon Pulse</td>
+<td>Slack Off</td>
+<td>Close Combat</td>
 <td>Earth Power</td>
 <td>Dragon Pulse</td>
-<td>Ancient Power</td>
+<td>Future Sight</td>
 </tr>
 </tbody>
 </table>
@@ -1924,7 +1924,7 @@
 <td>Bug Buzz</td>
 <td>Poltergeist</td>
 <td>Ice Punch</td>
-<td>Ice Fang</td>
+<td>Crunch</td>
 <td>Ice Beam</td>
 </tr>
 <tr>
@@ -1932,7 +1932,7 @@
 <td></td>
 <td>Power Whip</td>
 <td>Bullet Punch</td>
-<td>Head Smash</td>
+<td>Ice Fang</td>
 <td>Flash Cannon</td>
 </tr>
 </tbody>
