--- a/src/steven_split.html
+++ b/src/steven_split.html
@@ -34,7 +34,7 @@
 	</div>
     <div class="navbar">
         <ul>
-            <a href="resources.html">Home</a>
+            <a href="resources.html">Lucid v1.2.1</a>
             <a href="roxanne_split.html">Roxanne</a>
             <a href="brawly_split.html">Brawly</a>
             <a href="wattson_split.html">Wattson</a>
@@ -208,7 +208,7 @@
 <td>Tailwind</td>
 <td>Avalanche</td>
 <td>Brave Bird</td>
-<td>Tailwind</td>
+<td>Play Rough</td>
 <td>Iron Head</td>
 <td>Ice Beam</td>
 </tr>
@@ -216,7 +216,7 @@
 <td>Reversal</td>
 <td>Curse</td>
 <td>Double-Edge</td>
-<td>Play Rough</td>
+<td>Seed Bomb</td>
 <td>Earthquake</td>
 <td>Freeze-Dry</td>
 </tr>
@@ -224,7 +224,7 @@
 <td>Knock Off</td>
 <td>Earthquake</td>
 <td>Swords Dance</td>
-<td>Seed Bomb</td>
+<td>Knock Off</td>
 <td>Body Press</td>
 <td></td>
 </tr>
@@ -232,7 +232,7 @@
 <td>Leaf Blade</td>
 <td>Liquidation</td>
 <td>Drill Run</td>
-<td>Return</td>
+<td>Tailwind</td>
 <td>Coil</td>
 <td></td>
 </tr>
@@ -1427,7 +1427,7 @@
 <td></td>
 </tr>
 <tr>
-<td>Stealth Rock</td>
+<td>Thunder Punch</td>
 <td>Spiky Shield</td>
 <td>Ancient Power</td>
 <td>Swords Dance</td>
