--- a/src/tate_and_liza_split.html
+++ b/src/tate_and_liza_split.html
@@ -34,7 +34,7 @@
 	</div>
     <div class="navbar">
         <ul>
-            <a href="resources.html">Home</a>
+            <a href="resources.html">Lucid v1.2.1</a>
             <a href="roxanne_split.html">Roxanne</a>
             <a href="brawly_split.html">Brawly</a>
             <a href="wattson_split.html">Wattson</a>
@@ -823,86 +823,256 @@
 </tbody>
 </table>
 <table class="content-table">
-<caption class="caption-content">Kyra and Jessica</caption>
+<caption class="caption-content">Jessica</caption>
+<tbody>
+<tr> <!-- Images -->
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/indeedee.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/slaking.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/weezing-galar.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/sneasler.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
+</tr>
+<tr> <!-- Species -->
+<th>Indeedee</th>
+<th>Slaking</th>
+<th>Weezing-Galar</th>
+<th>Sneasler</th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td>70</td>
+<td>68</td>
+<td>70</td>
+<td>68</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Terrain Extender</td>
+<td>Lum Berry</td>
+<td>Focus Sash</td>
+<td>Psychic Seed</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Psychic Surge</td>
+<td>Truant</td>
+<td>Neutralizing Gas</td>
+<td>Unburden</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Modest</td>
+<td>Jolly</td>
+<td>Modest</td>
+<td>Adamant</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Psychic</td>
+<td>Body Slam</td>
+<td>Strange Steam</td>
+<td>Sky Uppercut</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Tera Blast</td>
+<td>Drain Punch</td>
+<td>Sludge Bomb</td>
+<td>Dire Claw</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Light Screen</td>
+<td>Play Rough</td>
+<td>Fire Blast</td>
+<td>Acrobatics</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Reflect</td>
+<td>Knock Off</td>
+<td>Dark Pulse</td>
+<td>Throat Chop</td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<table class="content-table">
+<caption class="caption-content">Kyra</caption>
 <tbody>
 <tr> <!-- Images -->
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/urshifu-rapidstrike.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/meowscarada.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/farigiraf.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/cinderace.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/tsareena.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
 </tr>
 <tr> <!-- Species -->
 <th>Urshifu-Rapid</th>
-<th>Meowscarada</th>
-<th></th>
 <th>Farigiraf</th>
+<th>Cinderace</th>
 <th>Tsareena</th>
+<th></th>
 <th></th>
 </tr>
 <tr>
 <td>68</td>
+<td>70</td>
+<td>68</td>
 <td>68</td>
 <td></td>
-<td>68</td>
-<td>68</td>
 <td></td>
 </tr>
 <tr>
 <td>Focus Sash</td>
-<td>Misty Seed</td>
-<td></td>
 <td>Aguav Berry</td>
+<td>Misty Seed</td>
 <td>Wide Lens</td>
+<td></td>
 <td></td>
 </tr>
 <tr>
 <td>Unseen Fist</td>
-<td>Overgrow</td>
-<td></td>
 <td>Armor Tail</td>
+<td>Blaze</td>
 <td>Queenly Majesty</td>
+<td></td>
 <td></td>
 </tr>
 <tr>
 <td>Adamant</td>
-<td>Adamant</td>
-<td></td>
 <td>Modest</td>
 <td>Adamant</td>
+<td>Adamant</td>
+<td></td>
 <td></td>
 </tr>
 <tr>
 <td>Close Combat</td>
-<td>Flower Trick</td>
-<td></td>
 <td>Hyper Voice</td>
+<td>Blaze Kick</td>
 <td>Power Whip</td>
+<td></td>
 <td></td>
 </tr>
 <tr>
 <td>Surging Strikes</td>
-<td>Knock Off</td>
-<td></td>
 <td>Twin Beam</td>
+<td>Acrobatics</td>
 <td>Play Rough</td>
+<td></td>
 <td></td>
 </tr>
 <tr>
 <td>Ice Spinner</td>
-<td>Play Rough</td>
-<td></td>
 <td>Light Screen</td>
+<td>Headbutt</td>
 <td>Triple Axel</td>
+<td></td>
 <td></td>
 </tr>
 <tr>
 <td>Poison Jab</td>
-<td>Acrobatics</td>
-<td></td>
 <td>Reflect</td>
+<td>Reversal</td>
 <td>Low Sweep</td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<table class="content-table">
+<caption class="caption-content">Cooltrainer Cristin</caption>
+<tbody>
+<tr> <!-- Images -->
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/ironmoth.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/zoroark.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/slurpuff.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/typhlosion.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
+<td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
+</tr>
+<tr> <!-- Species -->
+<th>Iron Moth</th>
+<th>Zoroark</th>
+<th>Slurpuff</th>
+<th>Typhlosion</th>
+<th></th>
+<th></th>
+</tr>
+<tr>
+<td>68</td>
+<td>68</td>
+<td>68</td>
+<td>70</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Air Balloon</td>
+<td>Focus Sash</td>
+<td>Misty Seed</td>
+<td>Fire Gem</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Quark Drive</td>
+<td>Illusion</td>
+<td>Unburden</td>
+<td>Blaze</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Timid</td>
+<td>Jolly</td>
+<td>Modest</td>
+<td>Timid</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Sludge Wave</td>
+<td>Night Daze</td>
+<td>Misty Explosion</td>
+<td>Flamethrower</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Fiery Dance</td>
+<td>Extrasensory</td>
+<td>Draining Kiss</td>
+<td>Extrasensory</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Bug Buzz</td>
+<td>Burning Jealousy</td>
+<td>Flamethrower</td>
+<td>Shadow Ball</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Discharge</td>
+<td>Nasty Plot</td>
+<td>Calm Mind</td>
+<td>Scorching Sands</td>
+<td></td>
 <td></td>
 </tr>
 </tbody>
@@ -1327,91 +1497,6 @@
 <td>Reversal</td>
 <td>Dark Pulse</td>
 <td>Bulk Up</td>
-<td></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<table class="content-table">
-<caption class="caption-content">Cooltrainer Cristin</caption>
-<tbody>
-<tr> <!-- Images -->
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/ironmoth.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/zoroark.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/slurpuff.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/typhlosion.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
-<td><img src="https://play.pokemonshowdown.com/sprites/gen5/.png" alt=""></img></td>
-</tr>
-<tr> <!-- Species -->
-<th>Iron Moth</th>
-<th>Zoroark</th>
-<th>Slurpuff</th>
-<th>Typhlosion</th>
-<th></th>
-<th></th>
-</tr>
-<tr>
-<td>68</td>
-<td>68</td>
-<td>68</td>
-<td>70</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>Air Balloon</td>
-<td>Focus Sash</td>
-<td>Misty Seed</td>
-<td>Fire Gem</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>Quark Drive</td>
-<td>Illusion</td>
-<td>Unburden</td>
-<td>Blaze</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>Timid</td>
-<td>Jolly</td>
-<td>Modest</td>
-<td>Timid</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>Sludge Wave</td>
-<td>Night Daze</td>
-<td>Misty Explosion</td>
-<td>Flamethrower</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>Fiery Dance</td>
-<td>Extrasensory</td>
-<td>Draining Kiss</td>
-<td>Extrasensory</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>Bug Buzz</td>
-<td>Burning Jealousy</td>
-<td>Flamethrower</td>
-<td>Shadow Ball</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>Discharge</td>
-<td>Nasty Plot</td>
-<td>Calm Mind</td>
-<td>Scorching Sands</td>
 <td></td>
 <td></td>
 </tr>
