--- a/src/brawly_split.html
+++ b/src/brawly_split.html
@@ -34,7 +34,7 @@
 	</div>
     <div class="navbar">
         <ul>
-            <a href="resources.html">Home</a>
+            <a href="resources.html">Lucid v1.2.1</a>
             <a href="roxanne_split.html">Roxanne</a>
             <a href="brawly_split.html">Brawly</a>
             <a href="wattson_split.html">Wattson</a>
@@ -47,11 +47,6 @@
         </ul>
     </div>
 <div>
-<div class="container">
-<h1 class="location">Route 116</h1>
-<div class="line">
-</div>
-</div>
 <table class="content-table">
 <caption class="caption-content">School Kid Jerry and Youngster Johnson</caption>
 <tbody>
