Flame body instead of Flash Fire

--- a/src/steven_split.html
+++ b/src/steven_split.html
@@ -651,7 +651,7 @@
 <td>Speed Boost</td>
 <td>Supersweet Syrup</td>
 <td>Clear Body</td>
-<td>Flash Fire</td>
+<td>Flame Body</td>
 </tr>
 <tr>
 <td>Naive</td>
