forgot doubles documentation

--- a/src/tate_and_liza_split.html
+++ b/src/tate_and_liza_split.html
@@ -34,7 +34,7 @@
 	</div>
     <div class="navbar">
         <ul>
-            <a href="resources.html">Lucid v1.2.1</a>
+            <a href="resources.html">Home</a>
             <a href="roxanne_split.html">Roxanne</a>
             <a href="brawly_split.html">Brawly</a>
             <a href="wattson_split.html">Wattson</a>
@@ -823,7 +823,7 @@
 </tbody>
 </table>
 <table class="content-table">
-<caption class="caption-content">Jessica</caption>
+<caption class="caption-content">Beauty Jessica [Double]</caption>
 <tbody>
 <tr> <!-- Images -->
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/indeedee.png" alt=""></img></td>
@@ -908,7 +908,7 @@
 </tbody>
 </table>
 <table class="content-table">
-<caption class="caption-content">Kyra</caption>
+<caption class="caption-content">Triathlete Kyra [Double]</caption>
 <tbody>
 <tr> <!-- Images -->
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/urshifu-rapidstrike.png" alt=""></img></td>
@@ -1503,7 +1503,7 @@
 </tbody>
 </table>
 <table class="content-table">
-<caption class="caption-content">Gentleman Walter</caption>
+<caption class="caption-content">Gentleman Walter [Double]</caption>
 <tbody>
 <tr> <!-- Images -->
 <td><img src="https://play.pokemonshowdown.com/sprites/gen5/farigiraf.png" alt=""></img></td>
