add version on front page

--- a/src/resources.html
+++ b/src/resources.html
@@ -34,7 +34,7 @@
 	</div>
     <div class="navbar">
         <ul>
-            <a href="resources.html">Home</a>
+            <a href="resources.html">Lucid 1.2.1</a>
             <a href="roxanne_split.html">Roxanne</a>
             <a href="brawly_split.html">Brawly</a>
             <a href="wattson_split.html">Wattson</a>
@@ -48,7 +48,7 @@
     </div>
 <div>
 <div class="resources">
-<h1>General Information [Ordered by game progression]</h1>
+<h1>General Information (Latest Version 1.2.1)</h1>
 </div>
 <div class="resources">
 <h1>Lake</h1>
