--- a/src/resources.html
+++ b/src/resources.html
@@ -24,7 +24,7 @@
 		<div class="header">
 			<ul class="nav">
 				<li><a class="button nav-first" href="https://github.com/lhearachel/porydex"><img src="../images/pokemonshowdownbeta.png" alt="Pok&eacute;mon Showdown! (beta)" />Github</a></li>
-				<li><a class="button" href="../index.html">Pok&eacute;dex</a></li>
+				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid-Pokedex/">Pok&eacute;dex</a></li>
 				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid-Calc/" target="_blank">Calculator</a></li>
 				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid/src/download.html" target="_blank">Download</a></li>
                 <li><a class="button nav-last" href="resources.html" >Trainer Sheet</a></li>
