--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="header">
 			<ul class="nav">
 				<li><a class="button nav-first" href="https://github.com/lhearachel/porydex"><img src="images/pokemonshowdownbeta.png" alt="Pok&eacute;mon Showdown! (beta)" />Github</a></li>
-				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid-Pokedex/">Pok&eacute;dex</a></li>
+				<li><a class="button" href="/">Pok&eacute;dex</a></li>
 				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid-Calc/" target="_blank">Calculator</a></li>
 				<li><a class="button" href="https://pklucid.github.io/Pokemon-Lucid/src/download.html" target="_blank">Download</a></li>
 				<li><a class="button nav-last" href="https://pklucid.github.io/Pokemon-Lucid-Pokedex/src/resources.html" >Trainer Sheet</a><li/>
